--- a/index.html
+++ b/index.html
@@ -19,7 +19,27 @@
 }
 </script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Bibliothèques pour la capture et génération PDF -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script>
+      // Système de thèmes statiques pour le pré-chargement
+      const THEME_PALETTES = {
+        amber: { '50': '255 251 235', '100': '254 243 199', '200': '253 230 138', '300': '252 211 77', '400': '251 191 36', '500': '245 158 11', '600': '217 119 6', '700': '180 83 9', '800': '146 64 14', '900': '120 53 15', '950': '69 26 3' },
+        teal: { '50': '240 253 250', '100': '204 251 241', '200': '167 243 228', '300': '107 231 208', '400': '45 212 191', '500': '20 184 166', '600': '13 148 136', '700': '15 118 110', '800': '17 94 89', '900': '19 78 74', '950': '4 47 46' },
+        sky: { '50': '240 249 255', '100': '224 242 254', '200': '186 230 253', '300': '125 211 252', '400': '56 189 248', '500': '14 165 233', '600': '2 132 199', '700': '3 105 161', '800': '7 89 133', '900': '12 74 110', '950': '8 47 73' },
+        rose: { '50': '255 241 242', '100': '255 228 230', '200': '254 205 211', '300': '253 164 175', '400': '251 113 133', '500': '244 63 94', '600': '225 29 72', '700': '190 18 60', '800': '159 18 57', '900': '136 19 55', '950': '76 5 25' }
+      };
+
+      // ANTI-FLASH : Appliquer le thème immédiatement avant le rendu
+      (function() {
+        const savedTheme = localStorage.getItem('app_theme_color') || 'amber';
+        const palette = THEME_PALETTES[savedTheme] || THEME_PALETTES.amber;
+        for (const key in palette) {
+          document.documentElement.style.setProperty(`--color-primary-${key}`, palette[key]);
+        }
+      })();
+
       tailwind.config = {
         theme: {
           extend: {
@@ -43,7 +63,7 @@
       }
     </script>
     <style>
-        /* Default Amber Theme */
+        /* Variables par défaut au cas où LocalStorage est vide (Amber) */
         :root {
             --color-primary-50: 255 251 235;
             --color-primary-100: 254 243 199;
@@ -59,31 +79,11 @@
         }
 
         @media print {
-            body {
-                background-color: white !important;
-            }
-            .no-print {
-                display: none !important;
-            }
-            .invoice-page-container {
-                padding: 0 !important;
-                margin: 0 !important;
-                background-color: white !important;
-                min-height: auto !important;
-            }
-            .invoice-template {
-                width: 100% !important;
-                min-height: auto !important;
-                margin: 0 !important;
-                padding: 0 !important;
-                box-shadow: none !important;
-                border: none !important;
-            }
-             /* Styles for POS receipt printing */
-            @page {
-                size: 80mm auto; /* Thermal printer paper size */
-                margin: 2mm;
-            }
+            body { background-color: white !important; }
+            .no-print { display: none !important; }
+            .invoice-page-container { padding: 0 !important; margin: 0 !important; background-color: white !important; min-height: auto !important; }
+            .invoice-template { width: 100% !important; min-height: auto !important; margin: 0 !important; padding: 0 !important; box-shadow: none !important; border: none !important; }
+            @page { size: 210mm 297mm; margin: 0; }
         }
     </style>
 <link rel="stylesheet" href="/index.css">
